examples/22-aws-eks-shoppingportal-istio-ex/mtls-ex/mtls-shoppingportal.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "default"
  namespace: "shoppingportal"
spec:
  mtls:
    mode: STRICT
