examples/22-aws-eks-shoppingportal-istio-ex/mtls-ex/shoppingportal2-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: shoppingportal2
    labels:
       name: shoppingportal2
