examples/22-aws-eks-shoppingportal-istio-ex/mtls-ex/productreview-default-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: productreviewservice
spec:
  selector: 
    name: productreviewms
  ports:
  - protocol: TCP
    targetPort: 8082
    port: 80
    name: http
