examples/22-aws-eks-shoppingportal-istio-ex/mtls-ex/productreview-shoppingportal2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: productreviewservice
  Namespace: shoppingportal2 
spec:
  selector: 
    name: productreviewms
  ports:
  - protocol: TCP
    targetPort: 8082
    port: 80
    name: http
