examples/22-aws-eks-shoppingportal-istio-ex/mtls-ex/dr-mts-disable.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: productreviewms-dr
 namespace: shoppingportal
spec:
 host: "*.default.svc.cluster.local"
 trafficPolicy:
   tls:
     mode: DISABLE
